Fixes layout issues with elements within the grid
## Added
- Class "body.constrained" to set max-width CSS property for ".off-canvas-content".
- CSS rule to force the last column to the left in grids.

## Fixed
- Loads "sidebar-primary.php" from "index.php", "page.php", "single.php" and templates.
- Margins left and right for elements within ".archive.grid".

## Removed
- Javascript/jQuery script to force the last column to align to the left in grids in "archive-grids.php".

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -32,6 +32,38 @@
 
 
 // -------------------------------------
+// Fix alignment for Archive Grid elements
+// -------------------------------------
+@media screen and (min-width: 40em) {
+  .row .row.archive-grid {
+      margin-left: auto;
+      margin-right: auto;
+  }
+}
+
+
+// -------------------------------------
+// Align the last element within the grid to the left
+// -------------------------------------
+[class*="column"]+[class*="column"]:last-child,
+[class*="columns"]+[class*="columns"]:last-child,
+.row .column, .row .columns {
+  float: left !important;
+}
+
+
+// -------------------------------------
+// Constrains for main content
+// -------------------------------------
+// Add class .constrained to body to take effect
+
+body.constrained .off-canvas-content {
+  margin: 0 auto;
+  max-width: 80rem; // Change the max-width to adjust off-canvas-content
+}
+
+
+// -------------------------------------
 // Posts and post content
 // -------------------------------------
 
