--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4148,6 +4148,21 @@ li > i {
   margin-right: auto;
   max-width: initial; }
 
+@media screen and (min-width: 40em) {
+  .row .row.archive-grid {
+    margin-left: auto;
+    margin-right: auto; } }
+
+[class*="column"] + [class*="column"]:last-child,
+[class*="columns"] + [class*="columns"]:last-child,
+.row .column,
+.row .columns, .row .columns {
+  float: left !important; }
+
+body.constrained .off-canvas-content {
+  margin: 0 auto;
+  max-width: 80rem; }
+
 #content #inner-content {
   padding: 1rem 0rem; }
 
